--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -1,5 +1,5 @@
 .landing {
-    padding-top: 10vh;
+    padding-top: 8vh;
     height: 80vh;
     display: grid;
     grid-template-columns: 1fr 1fr;
@@ -10,7 +10,7 @@
 .text-seciton { 
     display: flex;
     justify-content: center; 
-    margin: 15vh auto;
+    margin: 13vh auto;
 }
 
 .text-seciton .landing-container h3 {
@@ -31,7 +31,7 @@
 
  
 .text-seciton .landing-container .text{ 
-    margin-top: 5vh;
+    margin-top: 7vh;
 }
 
 .text-seciton .landing-container .text p { 
@@ -47,4 +47,44 @@
 .image-seciton img {
     width: 90%; 
     margin: 0 auto;
+}
+
+.text-seciton .landing-container .text  {
+    display: flex;
+    align-items : center ;
+}
+ 
+.text-seciton .landing-container .text p {
+    font-size: 1.5rem;
+    color : #f2f2f2;
+    font-weight: bold;
+    margin : 0 0 ; 
+}
+
+.highlighted-text {
+    background-image: url('../../img/textHighlight.svg');
+    background-position: 50% 50%;
+    padding-left: 35px;
+    padding-right: 55px;
+    padding-top: 5px;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.text-seciton .landing-container .text a {
+    color: #f2f2f2;
+    background-color : #619B8A;
+    padding : 1vh 1vw;
+    border : 5px;
+    transition: 250ms;
+    text-decoration: none;
+    font-size: 1.2rem;
+    max-height: auto ;  
+    margin: 0 2vw ; 
+    font-weight: bold ;
+    letter-spacing: 1px;
+}
+
+.text-seciton .landing-container .text a:hover{ 
+    background-color : #F28482; 
 }
