--- a/src/components/Header/Header.css
+++ b/src/components/Header/Header.css
@@ -3,6 +3,7 @@
 .header {
     width: 100vw;
     position: fixed;
+    z-index: 100;
 }
 
 .container {
@@ -11,7 +12,7 @@
     position: relative;
     margin: 1vh auto;
     padding: 1vh 1.5vw;
-    box-sizing: border-box;
+    box-sizing: border-box; 
 }
 
 .logo {
@@ -28,6 +29,7 @@
     box-shadow: 0 4px 30px rgba(0, 0, 0, 0.1);
     backdrop-filter: blur(9.2px);
     -webkit-backdrop-filter: blur(9.2px);
+    margin: 0 auto;
 }
 
 .container h2 {
