future and now section

--- a/src/App.css
+++ b/src/App.css
@@ -4,7 +4,7 @@
 .App {
 
   /* background: linear-gradient(to bottom, #ee4b4b, #fad65f 50%, #DB1174, #9B4CA7); */
-  background-color:#f8eccc;
+  background-color:#faf0d5;
   font-family: 'Baloo 2', cursive;
   padding-bottom: 10vh;
 }
