--- a/src/components/SignUp/SignUp.css
+++ b/src/components/SignUp/SignUp.css
@@ -40,3 +40,45 @@
     color: #fff;
 
 }
+
+
+@media  screen and (max-width: 1500px) {
+
+    .signup .right h2 { 
+        font-size: 2.5rem; 
+        padding-right: 1vw;
+    }
+
+    .signup .right a { 
+        font-size: 1rem; 
+        padding: 1.3vh 1.2vw; 
+    }
+    .signup img {
+        width: 100%;
+        top: -40%;
+    }
+ 
+    
+}
+
+
+@media  screen and (max-width: 950px) {
+    .signup img {
+        width: 70%;
+        position: relative;
+        left: 40%;
+        top: 50%;
+        transform: translate(-50%,-50%);
+    }
+    .signup { 
+        width: 70%;
+        grid-template-columns: 1fr ;
+        padding: 5vh 0;
+        text-align: center;
+    }
+    .signup .right h2 { 
+        font-size: 1.8rem;   
+    }
+ 
+
+}
