--- a/src/components/Landing/Landing.css
+++ b/src/components/Landing/Landing.css
@@ -157,3 +157,16 @@
     }
 
 }
+
+
+
+
+@media  screen and (max-width: 700px) {
+    .landing {
+        width: 100%;
+        padding :0 0 10vh 0;
+        height: auto;
+        grid-template-columns:  1fr;
+    }
+
+}
