--- a/src/components/Store/Store.css
+++ b/src/components/Store/Store.css
@@ -85,7 +85,12 @@
     .store p {
         font-size: 1rem;
     }
-     
+}    
  
-    
+@media  screen and (max-width: 700px) {
+
+    .store {
+        width: 80%;
+        grid-template-columns: 1fr  ;
+    }
 }
